Defined RPC types, added RPC endpoint methods, and added tests

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "electron .",
     "build": "npm run clear-build-directory && npm run copy-static-files && npm run scss && npm run js",
     "watch": "npm run watch-static-files & npm run watch-scss & npm run watch-js",
-    "test": "mocha ./tests",
+    "test": "mocha --require @babel/register ./tests/rpc-controller.js",
     "js": "babel src/app --out-dir dist/app --verbose",
     "watch-js": "babel src/app --out-dir dist/app --watch --verbose",
     "scss": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/main.scss dist/css/main.css",
@@ -37,6 +37,7 @@
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
     "@babel/preset-react": "^7.10.4",
+    "@babel/register": "^7.10.4",
     "babel-eslint": "^10.1.0",
     "colors": "^1.4.0",
     "electron": "^9.0.5",
