--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "dependencies": {
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
+    "bootstrap": "^4.5.0",
     "electron-context-menu": "^2.0.1",
     "electron-is-dev": "^1.2.0",
     "electron-updater": "^4.3.1",
@@ -64,6 +65,7 @@
     "lodash": "^4.17.15",
     "mathjs": "^7.0.2",
     "moment": "^2.27.0",
+    "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
