--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "rmrf-promise": "^1.1.0",
