--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "blocknet-litewallet",
+  "name": "xvault",
   "version": "0.1.0",
-  "description": "blocknet-litewallet",
+  "description": "xvault",
   "private": true,
   "main": "./dist/app/index.js",
   "scripts": {
@@ -16,6 +16,18 @@
     "copy-static-files": "node ./build-scripts/copy-files.js",
     "watch-static-files": "nodemon -w src -i app/* -i scss/* -e html,css,scss,js,ttf,ico,jpg,png,svg -x \"npm run copy-static-files\"",
     "clear-build-directory": "node ./build-scripts/clear-build-dir.js",
+    "build-native": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder --dir",
+    "build-native-win": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --ia32 --win nsis zip --publish never",
+    "build-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish never",
+    "build-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage deb tar.gz --publish never",
+    "build-gitlab-win": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --ia32 --win nsis zip --publish never",
+    "build-gitlab-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --mac zip --publish never",
+    "build-gitlab-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage deb tar.gz --publish never",
+    "publish-native-win": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --win --publish always",
+    "publish-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
+    "publish-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
+    "pack-native": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder",
+    "publish-native": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder --publish always",
     "generate-docs": "jsdoc -r --destination docs ./src/app"
   },
   "repository": {
@@ -77,5 +89,69 @@
     "sweetalert": "^2.1.2",
     "uuid": "^8.2.0",
     "winston": "^3.3.3"
+  },
+  "build": {
+    "electronVersion": "9.0.5",
+    "appId": "co.blocknet.xvault",
+    "productName": "XVault",
+    "artifactName": "${name}-${version}-${os}.${ext}",
+    "copyright": "Copyright © 2020 Blocknet",
+    "directories": {
+      "app": "temp",
+      "output": "dist-native"
+    },
+    "win": {
+      "artifactName": "${name}-${version}-${os}-${arch}.${ext}",
+      "verifyUpdateCodeSignature": false,
+      "target": [
+        {
+          "target": "zip",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        },
+        {
+          "target": "nsis",
+          "arch": [
+            "x64",
+            "ia32"
+          ]
+        }
+      ],
+      "publish": {
+        "provider": "github",
+        "releaseType": "draft"
+      }
+    },
+    "mac": {
+      "target": [
+        "dmg",
+        "zip"
+      ],
+      "category": "public.app-category.utilities",
+      "gatekeeperAssess": false,
+      "publish": {
+        "provider": "github",
+        "releaseType": "draft"
+      }
+    },
+    "linux": {
+      "target": [
+        "appImage",
+        "tar.gz",
+        "deb"
+      ],
+      "synopsis": "Copyright © 2020 Blocknet",
+      "description": "Copyright © 2020 Blocknet",
+      "category": "Utility",
+      "desktop": {
+        "Name": "XVault"
+      },
+      "publish": {
+        "provider": "github",
+        "releaseType": "draft"
+      }
+    }
   }
 }
