--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "./dist/app/index.js",
   "scripts": {
     "start": "electron .",
+    "start-dev": "electron --remote-debugging-port=9222 .",
     "build": "npm run clear-build-directory && npm run copy-static-files && npm run scss && npm run js",
     "watch": "npm run watch-static-files & npm run watch-scss & npm run watch-js",
     "test": "mocha --require @babel/register ./tests",
@@ -55,6 +56,7 @@
     "colors": "^1.4.0",
     "electron": "^9.0.5",
     "electron-builder": "^22.7.0",
+    "electron-mocha": "^9.0.1",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.5",
