Separate main and renderer tests

--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "start-dev": "electron --remote-debugging-port=9222 .",
     "build": "npm run clear-build-directory && npm run copy-static-files && npm run scss && npm run js",
     "watch": "npm run watch-static-files & npm run watch-scss & npm run watch-js",
-    "test": "mocha --require @babel/register ./tests",
+    "test": "npm run test-main && npm run test-renderer",
+    "test-main": "electron-mocha --require @babel/register --color ./tests/*-tests.js",
+    "test-renderer": "electron-mocha --require @babel/register --color --renderer ./tests/*-rtests.js",
     "js": "babel src/app --out-dir dist/app --verbose",
     "watch-js": "babel src/app --out-dir dist/app --watch --verbose",
     "scss": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/main.scss dist/css/main.css",
