--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xvault",
-  "version": "0.1.0",
+  "version": "0.6.0",
   "description": "xvault",
   "private": true,
   "main": "./dist/app/index.js",
@@ -10,6 +10,7 @@
     "build": "npm run clear-build-directory && npm run copy-static-files && npm run scss && npm run js",
     "watch": "npm run watch-static-files & npm run watch-scss & npm run watch-js",
     "test": "npm run test-main && npm run test-renderer",
+    "test-headless": "xvfb-maybe electron-mocha --require @babel/register --color --renderer --no-sandbox ./tests/*-rtests.js",
     "test-main": "electron-mocha --require @babel/register --color ./tests/*-tests.js",
     "test-renderer": "electron-mocha --require @babel/register --color --renderer ./tests/*-rtests.js",
     "js": "babel src/app --out-dir dist/app --verbose",
@@ -21,11 +22,8 @@
     "clear-build-directory": "node ./build-scripts/clear-build-dir.js",
     "build-native": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder --dir",
     "build-native-win": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --ia32 --win nsis zip --publish never",
-    "build-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish never",
+    "build-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --mac dir --publish never",
     "build-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage deb tar.gz --publish never",
-    "build-gitlab-win": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --ia32 --win nsis zip --publish never",
-    "build-gitlab-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --mac zip --publish never",
-    "build-gitlab-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage deb tar.gz --publish never",
     "publish-native-win": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --win --publish always",
     "publish-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
     "publish-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
@@ -66,7 +64,8 @@
     "mocha": "^8.0.1",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
-    "should": "^13.2.3"
+    "should": "^13.2.3",
+    "xvfb-maybe": "^0.2.1"
   },
   "dependencies": {
     "@babel/cli": "^7.10.4",
@@ -99,14 +98,14 @@
     "electronVersion": "9.0.5",
     "appId": "co.blocknet.xvault",
     "productName": "XVault",
-    "artifactName": "${name}-${version}-${os}.${ext}",
+    "artifactName": "XVault-${version}-${os}.${ext}",
     "copyright": "Copyright © 2020 Blocknet",
     "directories": {
       "app": "temp",
       "output": "dist-native"
     },
     "win": {
-      "artifactName": "${name}-${version}-${os}-${arch}.${ext}",
+      "artifactName": "XVault-${version}-${os}-${arch}.${ext}",
       "verifyUpdateCodeSignature": false,
       "target": [
         {
