Added register and login functionality
Fixed line endings when writing to stdin

Removed extra comma

Update master conf from within loadConfs

Correctd master conf type when updating conf

Fixed line ending issue in Windows and added CC_WALLET_PASS and CC_WALLET_AUTOLOGIN environmental variables in dev

Added bin dir to .gitignore

Added CloudChains CLI method tests

Fixed getCCSPVFilePath method

Added console logs for debugging gitlab script

Updated download-binaries script

Changed unzip callback to await

Updated asarUnpack configuration

Moved CloudChains instantiation to top of startup process function

Moved cloudChains instance outside of startup function. Cleaned up tests.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,6 +19,7 @@ build_linux:
   image: electronuserland/builder:latest
   script:
     - "npm install --no-audit"
+    - "npm run download-binaries-linux"
     - "npm run build-native-linux"
   artifacts:
     name: "XVault-$CI_COMMIT_REF_NAME-linux"
@@ -32,6 +33,7 @@ build_win:
   image: electronuserland/builder:wine
   script:
     - "npm install --no-audit"
+    - "npm run download-binaries-win"
     - "npm run build-native-win"
   artifacts:
     name: "XVault-$CI_COMMIT_REF_NAME-win"
@@ -44,6 +46,7 @@ build_mac:
   image: blocknetdx/devbuilds:blockdx-gitlab-mac
   script:
     - "npm install --no-audit"
+    - "npm run download-binaries-mac"
     - "npm run build-native-mac"
   artifacts:
     name: "XVault-$CI_COMMIT_REF_NAME-mac"
