--- a/package.json
+++ b/package.json
@@ -29,6 +29,10 @@
     "publish-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
     "pack-native": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder",
     "publish-native": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder --publish always",
+    "download-binaries": "npm run download-binaries-win && npm run download-binaries-linux && npm run download-binaries-mac",
+    "download-binaries-win": "node download-binaries.js win",
+    "download-binaries-linux": "node download-binaries.js linux",
+    "download-binaries-mac": "node download-binaries.js mac",
     "generate-docs": "jsdoc -r --destination docs ./src/app"
   },
   "repository": {
@@ -60,6 +64,7 @@
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.5",
+    "extract-zip": "^2.0.1",
     "jsdoc": "^3.6.4",
     "mocha": "^8.0.1",
     "node-sass": "^4.14.1",
@@ -95,6 +100,11 @@
     "winston": "^3.3.3"
   },
   "build": {
+    "asarUnpack": [
+      "**/bin/linux/Cloudchains-SPV",
+      "**/bin/mac/Cloudchains-SPV",
+      "**/bin/win/Cloudchains-SPV.exe"
+    ],
     "electronVersion": "9.0.5",
     "appId": "co.blocknet.xvault",
     "productName": "XVault",
