--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@babel/cli": "^7.10.4",
     "@babel/core": "^7.10.4",
     "bootstrap": "^4.5.0",
+    "dexie": "^3.0.2",
     "electron-context-menu": "^2.0.1",
     "electron-is-dev": "^1.2.0",
     "electron-updater": "^4.3.1",
