Electron security implementation
Added context isolation support and enabled the sandbox. Also
disabled node integration on the renderer. ContextBridge is
being leveraged to expose the wallet apis securely to the
renderer process.

--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name": "xvault",
-  "version": "0.7.1",
+  "version": "0.8.0",
   "description": "xvault",
   "private": true,
-  "main": "./dist/app/index.js",
+  "main": "./dist/server/index.js",
   "scripts": {
     "start": "electron .",
     "start-dev": "electron --remote-debugging-port=9222 .",
-    "build": "npm run clear-build-directory && npm run copy-static-files && npm run scss && npm run js",
+    "build": "npm run clear-build-directory && npm run copy-static-files && npm run scss && npm run js && npm run js-error",
     "watch": "npm run watch-static-files & npm run watch-scss & npm run watch-js",
     "test": "npm run test-main && npm run test-renderer",
     "test-headless": "xvfb-maybe electron-mocha --require @babel/register --color --renderer --no-sandbox ./tests/*-rtests.js",
     "test-main": "electron-mocha --require @babel/register --color ./tests/*-tests.js",
     "test-renderer": "electron-mocha --require @babel/register --color --renderer ./tests/*-rtests.js",
-    "js": "babel src/app --out-dir dist/app --verbose",
-    "watch-js": "babel src/app --out-dir dist/app --watch --verbose",
+    "js": "babel src/server -d dist/server --verbose && babel src/app -d dist/app --verbose && npm run js-app",
+    "js-app": "webpack --config-name=mainjs",
+    "js-error": "webpack --config-name=errorjs",
+    "watch-js": "babel src/server -d dist/server --watch --verbose & babel src/app -d dist/app --watch --verbose & npm run watch-js-app",
+    "watch-js-app": "webpack --config-name=mainjs --watch",
+    "watch-js-error": "webpack --config-name=errorjs --watch",
     "scss": "node-sass --output-style expanded --source-map true --source-map-contents true --precision 6 src/scss/main.scss dist/css/main.css",
     "watch-scss": "nodemon -w src/scss -e scss -x \"npm run scss\"",
     "copy-static-files": "node ./build-scripts/copy-files.js",
@@ -25,11 +29,11 @@
     "build-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --mac dir --publish never",
     "build-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage deb tar.gz --publish never",
     "build-native-linux2": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage --publish never",
-    "publish-native-win": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --win --publish always",
-    "publish-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
-    "publish-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
-    "pack-native": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder",
-    "publish-native": "npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder --publish always",
+    "publish-native-win": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --win --publish always",
+    "publish-native-mac": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
+    "publish-native-linux": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
+    "pack-native": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder",
+    "publish-native": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder --publish always",
     "download-binaries": "npm run download-binaries-win && npm run download-binaries-linux && npm run download-binaries-mac",
     "download-binaries-win": "node download-binaries.js win",
     "download-binaries-linux": "node download-binaries.js linux",
@@ -54,12 +58,18 @@
   "homepage": "https://github.com/blocknetdx/litewallet#readme",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
+    "@babel/plugin-transform-modules-amd": "^7.10.5",
     "@babel/plugin-transform-modules-commonjs": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
     "@babel/preset-react": "^7.10.4",
     "@babel/register": "^7.10.4",
     "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-minify": "^0.5.1",
     "colors": "^1.4.0",
-    "electron": "^9.0.5",
+    "cross-env": "^7.0.2",
+    "electron": "^10.1.1",
     "electron-builder": "^22.7.0",
     "electron-mocha": "^9.0.1",
     "eslint": "^7.3.1",
@@ -71,6 +81,8 @@
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
     "should": "^13.2.3",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
     "xvfb-maybe": "^0.2.1"
   },
   "dependencies": {
