--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "xvault",
-  "version": "0.8.0",
-  "description": "xvault",
+  "name": "xlite",
+  "version": "0.8.1",
+  "description": "xlite",
   "private": true,
   "main": "./dist/server/index.js",
   "scripts": {
@@ -119,17 +119,17 @@
       "**/bin/mac/Cloudchains-SPV",
       "**/bin/win/Cloudchains-SPV.exe"
     ],
-    "electronVersion": "9.0.5",
-    "appId": "co.blocknet.xvault",
-    "productName": "XVault",
-    "artifactName": "XVault-${version}-${os}.${ext}",
+    "electronVersion": "10.1.1",
+    "appId": "co.blocknet.xlite",
+    "productName": "XLite",
+    "artifactName": "XLite-${version}-${os}.${ext}",
     "copyright": "Copyright © 2020 Blocknet",
     "directories": {
       "app": "temp",
       "output": "dist-native"
     },
     "win": {
-      "artifactName": "XVault-${version}-${os}-${arch}.${ext}",
+      "artifactName": "XLite-${version}-${os}-${arch}.${ext}",
       "verifyUpdateCodeSignature": false,
       "target": [
         {
@@ -147,6 +147,7 @@
           ]
         }
       ],
+      "icon": "./src/images/favicon.ico",
       "publish": {
         "provider": "github",
         "releaseType": "draft"
@@ -158,6 +159,7 @@
         "zip"
       ],
       "category": "public.app-category.utilities",
+      "icon": "./src/images/favicon.icns",
       "gatekeeperAssess": false,
       "publish": {
         "provider": "github",
@@ -170,11 +172,12 @@
         "tar.gz",
         "deb"
       ],
+      "icon": "./src/images/linux/",
       "synopsis": "Copyright © 2020 Blocknet",
       "description": "Copyright © 2020 Blocknet",
       "category": "Utility",
       "desktop": {
-        "Name": "XVault"
+        "Name": "XLite"
       },
       "publish": {
         "provider": "github",
