--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run clear-build-directory && npm run copy-static-files && npm run scss && npm run js && npm run js-error",
     "watch": "npm run watch-static-files & npm run watch-scss & npm run watch-js",
     "test": "npm run test-main && npm run test-renderer",
-    "test-headless": "xvfb-maybe electron-mocha --require @babel/register --color --renderer --no-sandbox ./tests/*-rtests.js",
+    "test-headless-main": "xvfb-maybe electron-mocha --require @babel/register --color --no-sandbox ./tests/*-tests.js",
+    "test-headless-renderer": "xvfb-maybe electron-mocha --require @babel/register --color --renderer --no-sandbox ./tests/*-rtests.js",
     "test-main": "electron-mocha --require @babel/register --color ./tests/*-tests.js",
     "test-renderer": "electron-mocha --require @babel/register --color --renderer ./tests/*-rtests.js",
     "js": "babel src/server -d dist/server --verbose && babel src/app -d dist/app --verbose && npm run js-app",
