--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
     "react-redux": "^7.2.0",
     "redux": "^4.0.5",
     "superagent": "^5.3.1",
-    "sweetalert": "^2.1.2",
+    "sweetalert2": "^10.0.2",
     "uuid": "^8.2.0",
     "winston": "^3.3.3"
   },
