--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/blocknetdx/litewallet.git"
+    "url": "git+https://github.com/blocknetdx/xlite.git"
   },
   "author": "Blocknet <contact@blocknet.co>",
   "contributors": [
