Updated webpack and package.json production build config (#122)
* Updated webpack and package.json production build config

* Added publish Dockerfiles

* Configured auto-updating

* Updated repository url

* Fixed this context in general_restartInstallUpdate

--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
     "build-native-mac": "npm run build && node ./native-build-scripts/01-copy-files.js mac && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --mac dir --publish never",
     "build-native-linux": "npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage deb tar.gz --publish never",
     "build-native-linux2": "npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --dir --x64 --linux appImage --publish never",
-    "publish-native-win": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js win && cd temp && npm install --no-audit --production && cd .. && electron-builder --win --publish always",
-    "publish-native-mac": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js mac && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
-    "publish-native-linux": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
+    "publish-native-win": "cross-env NODE_ENV=production npm run download-binaries-win && npm run build && node ./native-build-scripts/01-copy-files.js win && cd temp && npm install --no-audit --production && cd .. && electron-builder --win --publish always",
+    "publish-native-mac": "cross-env NODE_ENV=production npm run download-binaries-mac && npm run build && node ./native-build-scripts/01-copy-files.js mac && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
+    "publish-native-linux": "cross-env NODE_ENV=production npm run download-binaries-linux && npm run build && node ./native-build-scripts/01-copy-files.js linux && cd temp && npm install --no-audit --production && cd .. && electron-builder --publish always",
     "pack-native": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder",
     "publish-native": "cross-env NODE_ENV=production npm run build && node ./native-build-scripts/01-copy-files.js && cd temp && npm install --production && cd .. && electron-builder --publish always",
     "download-binaries": "npm run download-binaries-win && npm run download-binaries-linux && npm run download-binaries-mac",
@@ -43,7 +43,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/blocknetdx/litewallet.git"
+    "url": "git+https://github.com/blocknetdx/xlite.git"
   },
   "author": "Blocknet <contact@blocknet.co>",
   "contributors": [
@@ -54,9 +54,9 @@
   ],
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/blocknetdx/litewallet/issues"
+    "url": "https://github.com/blocknetdx/xlite/issues"
   },
-  "homepage": "https://github.com/blocknetdx/litewallet#readme",
+  "homepage": "https://github.com/blocknetdx/xlite#readme",
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-transform-modules-amd": "^7.10.5",
@@ -82,7 +82,7 @@
     "rmrf-promise": "^1.1.0",
     "should": "^13.2.3",
     "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12",
+    "webpack-cli": "^4.4.0",
     "xvfb-maybe": "^0.2.1"
   },
   "dependencies": {
@@ -168,9 +168,24 @@
     },
     "linux": {
       "target": [
-        "appImage",
-        "tar.gz",
-        "deb"
+        {
+          "target": "appImage",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "deb",
+          "arch": [
+            "x64"
+          ]
+        },
+        {
+          "target": "tar.gz",
+          "arch": [
+            "x64"
+          ]
+        }
       ],
       "icon": "./src/static/images/linux/",
       "synopsis": "Copyright © 2020-2021 Blocknet",
