Added StartupWMClass to Linux desktop file config

--- a/package.json
+++ b/package.json
@@ -192,7 +192,8 @@
       "description": "Copyright © 2020-2021 Blocknet",
       "category": "Utility",
       "desktop": {
-        "Name": "XLite"
+        "Name": "XLite",
+        "StartupWMClass": "xlite"
       },
       "publish": {
         "provider": "github",
