--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "colors": "^1.4.0",
     "cross-env": "^7.0.2",
     "electron": "^10.1.5",
-    "electron-builder": "^22.9.1",
+    "electron-builder": "22.10.5",
     "electron-mocha": "^9.1.0",
     "eslint": "^7.3.1",
     "eslint-plugin-react": "^7.20.3",
