--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "mocha": "^8.1.3",
     "node-sass": "^4.14.1",
     "nodemon": "^2.0.4",
+    "pkg": "^5.2.1",
     "rmrf-promise": "^1.1.0",
     "should": "^13.2.3",
     "webpack": "^4.44.1",
