--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "electron-context-menu": "^2.0.1",
     "electron-is-dev": "^1.2.0",
     "electron-updater": "^4.3.1",
+    "follow-redirects": "^1.15.2",
     "fs-extra": "^9.0.1",
     "immutable": "^4.0.0-rc.12",
     "jquery": "^3.5.1",
