--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,30 +31,34 @@ jobs:
       - name: Install Dependencies
         run: npm install --no-audit
         
-      - name: Download Binaries
-        run: |
-          if [[ ${{ startsWith(matrix.os, 'ubuntu') }} == true ]]; then
-            npm run download-binaries-linux
-          elif [[ ${{ startsWith(matrix.os, 'windows') }} == true ]]; then
-            npm run download-binaries-win
-          elif [[ ${{ startsWith(matrix.os, 'macos') }} == true ]]; then
-            npm run download-binaries-mac
-          fi
+      - name: Download Binaries (Ubuntu)
+        if: startsWith(matrix.os, 'ubuntu')
+        run: npm run download-binaries-linux
 
-          
-      - name: Build Native
-        run: |
-          if [[ ${{ startsWith(matrix.os, 'ubuntu') }} == true ]]; then
-            npm run build-native-linux2
-          elif [[ ${{ startsWith(matrix.os, 'windows') }} == true ]]; then
-            npm run build-native-win
-          elif [[ ${{ startsWith(matrix.os, 'macos') }} == true ]]; then
-            npm run build-native-mac
-          fi
+      - name: Download Binaries (Windows)
+        if: startsWith(matrix.os, 'windows')
+        run: npm run download-binaries-win
+
+      - name: Download Binaries (macOS)
+        if: startsWith(matrix.os, 'macos')
+        run: npm run download-binaries-mac
+
+      - name: Build Native (Ubuntu)
+        if: startsWith(matrix.os, 'ubuntu')
+        run: npm run build-native-linux2
+
+      - name: Build Native (Windows)
+        if: startsWith(matrix.os, 'windows')
+        run: npm run build-native-win
+
+      - name: Build Native (macOS)
+        if: startsWith(matrix.os, 'macos')
+        run: npm run build-native-mac
 
       - name: Publish Artifact
         uses: actions/upload-artifact@v2
         with:
-          name: artifacts-${{ matrix.os }}
-          path: dist-native/
+          name: XLite-1.0.4
+          path: dist-native/XLite-1.0.4-*
+
 
