--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,22 +43,15 @@ jobs:
         if: startsWith(matrix.os, 'macos')
         run: npm run download-binaries-mac
 
-      - name: Build Native (Ubuntu)
-        if: startsWith(matrix.os, 'ubuntu')
-        run: npm run build-native-linux2
+      - name: Build Native Image
+        run: npm run pack-native
 
-      - name: Build Native (Windows)
-        if: startsWith(matrix.os, 'windows')
-        run: npm run build-native-win
-
-      - name: Build Native (macOS)
-        if: startsWith(matrix.os, 'macos')
-        run: npm run build-native-mac
 
       - name: Publish Artifact
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: XLite-1.0.4
           path: dist-native/XLite-1.0.4-*
+
 
 
