--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,7 +50,7 @@ jobs:
       - name: Publish Artifact
         uses: actions/upload-artifact@v3
         with:
-          name: XLite-1.0.4
+          name: XLite-1.0.4-${{ matrix.os }}
           path: dist-native/XLite-1.0.4-*
 
 
