--- a/package.json
+++ b/package.json
@@ -58,59 +58,60 @@
   },
   "homepage": "https://github.com/blocknetdx/xlite#readme",
   "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.10.4",
-    "@babel/plugin-transform-modules-amd": "^7.10.5",
-    "@babel/plugin-transform-modules-commonjs": "^7.10.4",
-    "@babel/preset-env": "^7.11.5",
-    "@babel/preset-react": "^7.10.4",
-    "@babel/register": "^7.10.4",
+    "@babel/plugin-proposal-class-properties": "^7.13.0",
+    "@babel/plugin-transform-modules-amd": "^7.13.0",
+    "@babel/plugin-transform-modules-commonjs": "^7.13.0",
+    "@babel/preset-env": "^7.13.0",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/register": "^7.13.14",
     "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.1.0",
+    "babel-loader": "^8.2.2",
     "colors": "^1.4.0",
-    "cross-env": "^7.0.2",
-    "electron": "^10.1.5",
-    "electron-builder": "22.10.5",
+    "cross-env": "^7.0.3",
+    "electron": "^13.1.2",
+    "electron-builder": "22.13.1",
     "electron-mocha": "^9.1.0",
-    "eslint": "^7.3.1",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.0.5",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "extract-zip": "^2.0.1",
-    "jsdoc": "^3.6.4",
-    "mocha": "^8.1.3",
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4",
-    "rmrf-promise": "^1.1.0",
+    "jsdoc": "^3.6.7",
+    "mocha": "^9.1.1",
+    "node-sass": "^5.1.0",
+    "nodemon": "^2.0.12",
+    "rmrf-promise": "^1.2.0",
     "should": "^13.2.3",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^4.4.0",
+    "webpack": "^5.44.0",
+    "webpack-cli": "^4.7.2",
     "xvfb-maybe": "^0.2.1"
   },
   "dependencies": {
-    "@babel/cli": "^7.10.4",
-    "@babel/core": "^7.10.4",
-    "bootstrap": "^4.5.0",
-    "dexie": "^3.0.2",
-    "electron-context-menu": "^2.0.1",
+    "@babel/cli": "^7.13.10",
+    "@babel/core": "^7.13.14",
+    "bootstrap": "^5.0.2",
+    "dexie": "^3.1.1",
+    "electron-context-menu": "^2.2.0",
     "electron-is-dev": "^1.2.0",
-    "electron-updater": "^5.0.0",
-    "fs-extra": "^9.0.1",
-    "immutable": "^4.0.0-rc.12",
-    "jquery": "^3.5.1",
-    "lodash": "^4.17.20",
-    "mathjs": "^7.0.2",
-    "moment": "^2.27.0",
-    "popper.js": "^1.16.1",
+    "follow-redirects": "^1.16.0",
+    "electron-updater": "^5.5.0",
+    "fs-extra": "^10.0.0",
+    "immutable": "^4.0.0-rc.15",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
+    "mathjs": "^10.4.1",
+    "moment": "^2.29.1",
+    "popper.js": "^2.10.2",
     "prop-types": "^15.7.2",
-    "qrcode": "^1.4.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-perfect-scrollbar": "^1.5.8",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "superagent": "^5.3.1",
-    "sweetalert2": "^10.0.2",
-    "uuid": "^8.2.0",
-    "winston": "^3.3.3"
+    "qrcode": "^1.5.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-perfect-scrollbar": "^1.6.8",
+    "react-redux": "^7.2.5",
+    "redux": "^4.1.1",
+    "superagent": "^7.0.0",
+    "sweetalert2": "^11.1.6",
+    "uuid": "^8.3.2",
+    "winston": "^3.4.1"
   },
   "build": {
     "asarUnpack": [
